# RustyGears

./: .gitignore  Cargo.toml  README.md  build.rs  plan
game/: Cargo.toml
game/res/: block.mtl  semi.mtl
game/resources/models/ball/: ball.mtl
game/resources/models/big_block/: big_block.mtl
game/resources/models/block/: block.mtl
game/resources/models/car/: Avent_sport.mtl
game/resources/models/plane/: plane.mtl
game/shaders/: depth_shader.fs  depth_shader.vs  depth_vertex_shader.glsl  fragment_shader.fs  fragment_shader.glsl  vertex_shader.glsl  vertex_shader.vs
game/src/: main.rs
src/: lib.rs
src/entities/: character.rs  mod.rs  object.rs
src/game/: game.rs  gameloop.rs  mod.rs
src/gears/: gears.rs  mod.rs
src/graphics/: camera.rs  fog.rs  light.rs  macros.rs  mesh.rs  mod.rs  model.rs  scene.rs  shader.rs  utils.rs  window.rs
src/physics/: body.rs  collision.rs  collision_box.rs  mod.rs  octree.rs  world.rs
src/rustygears/: cameragear.rs  gameloop.rs  gear.rs  mod.rs  rustygears.rs
src/scene/: item.rs  mod.rs  scene.rs  world.rs
src/time/: time.rs
src/wgpu/: camera.rs  mod.rs  model.rs  resources.rs  texture.rs  window.rs
src/winit/: mod.rs
