[package]
name = "rusty_gears"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
glfw = "0.45.0"
rayon = "1.10.0"
tobj = { version = "3.2", features = ["async"]}
wgpu = "22.1.0"
winit = { version = "0.29", features = ["rwh_05"] }
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0.86"
cfg-if = "1.0.0"
instant = "0.1.13"
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.43.0", features = ["full"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
